2010-04-06  Abhinav Mithal <abhinav.mithal@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] npapi header leaves XP_WIN flag defined even when __SYMBIAN32__ flag is found
        https://bugs.webkit.org/show_bug.cgi?id=34614

        Do not define XP_WIN if WebKit is compiled for Symbian.

        No new tests as there is no new functionality.

        * bridge/npapi.h:

2010-04-06  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Beth Dakin.

        aria-label doesn't work on image map area
        https://bugs.webkit.org/show_bug.cgi?id=36977

        Test: platform/mac/accessibility/area-with-aria-label.html

        * accessibility/AccessibilityImageMapLink.cpp:
        (WebCore::AccessibilityImageMapLink::accessibilityDescription):

2010-04-06  James Robinson  <jamesr@chromium.org>

        Reviewed by Simon Fraser.

        Reverts the incorrect fixed position fastpath scrolling logic
        https://bugs.webkit.org/show_bug.cgi?id=33150

        This code does not properly handle overflow or transforms on fixed
        position elements, causing repaint bugs on scroll.

        No new tests.

        * page/FrameView.cpp:
        (WebCore::FrameView::addFixedObject):
        (WebCore::FrameView::removeFixedObject):
        * page/FrameView.h:
        * platform/ScrollView.cpp:
        (WebCore::ScrollView::scrollContents):
        * platform/ScrollView.h:
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::styleWillChange):

2010-04-06  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Build fix for wxMac / Cocoa on wx trunk.
        
        * platform/wx/wxcode/mac/carbon/fontprops.mm:
        (wxFontContainsCharacters):

2010-04-06  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Darin Adler.

        JS code generator does not support feature conditional attributes that are writable
        https://bugs.webkit.org/show_bug.cgi?id=37149
